# chambrier-rs

./: Cargo.toml
.github/workflows/: rust.yml
src/: event.rs  main.rs
src/hue/: client.rs  devices_response.rs  mod.rs  observer.rs
src/model/: boolean_property.rs  device.rs  mod.rs  number_property.rs
tests/resources/: devices_response.json  devices_response_button.json  devices_with_no_services.json
