[package]
name = "chambrier"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35.0", features = ["full"] }
reqwest = { version = "0.11.22", features = ["json", "gzip"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.31", features = ["serde"] }
thiserror = "1.0.50"
